--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>iChaconTecnologia</title>
+    <link rel="stylesheet" href="imagens/path/to/font-awesome/css/font-awesome.min.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <header>
+            <div class="img-wrapper">
+                <img src="imagens/bg.jpg" alt="">
+            </div>
+            <div class="banner">
+                <h1>Web Developer & Front End <br/> Designer</h1>
+                <p>Samuel Sanches Chacon Corrêa</p>
+                <button>Saiba mais</button>
+            </div>
+        </header>
+
+    </div>
 </body>
+
 </html>
