--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <div class="container">
 
         <div class="hamburguer">
-            <div class="line" id="line1"></div>
-            <div class="line" id="line2"></div>
-            <div class="line" id="line3"></div>
+            <div class="line" id="Line1"></div>
+            <div class="line" id="Line2"></div>
+            <div class="line" id="Line3"></div>
+            <span>Fechar</span>
 
         </div>
 
