--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>iChaconTecnologia</title>
+    <title>Samuel-Sanches.com</title>
     <link rel="stylesheet" href="imagens/path/to/font-awesome/css/font-awesome.min.css">
 </head>
 
@@ -31,7 +31,7 @@
                 <button>Saiba mais</button>
             </div>
         </header>
-        <div class="sidebar">
+        <aside class="sidebar">
             <nav>
                 <ul class="menu">
                     <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
@@ -47,7 +47,79 @@
                 <a href="#"><i class="fab fa-github"></i></a>
                 <a href="#"><i class="fab fa-instagram-square"></i></a>
             </div>
-        </div>
+        </aside>
+
+
+        <section class="sessao-conhecimentos">
+            <div class="sessao-header">
+                <h1>Conhecimentos</h1>
+            </div>
+            <div class="conhecimentos">
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-html5"></i>
+                        <h3>HTML</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Em produção Em produção Em produção Em produção Em produção Em produção
+                            Em produção Em produção Em produção Em produção
+                        </p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-css3"></i>
+                        <h3>CSS</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Em produção Em produção Em produção Em produção Em produção Em produção
+                            Em produção Em produção Em produção Em produção</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-js"></i>
+                        <h3>JavaScript</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Em produção Em produção Em produção Em produção Em produção Em produção
+                            Em produção Em produção Em produção Em produção </p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-windows"></i>
+                        <h3>Pacote Office</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Em produção Em produção Em produção Em produção Em produção Em produção
+                            Em produção Em produção Em produção Em produção</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fab fa-github-alt"></i>
+                        <h3>Git & GitHub</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Em produção Em produção Em produção Em produção Em produção Em produção
+                            Em produção Em produção Em produção Em produção</p>
+                    </div>
+                </div>
+                <div class="conhecimento">
+                    <div class="conhecimento-header">
+                        <i class="fa fa-database"></i>
+                        <h3>Banco de dados</h3>
+                    </div>
+                    <div class="conhecimento-text">
+                        <p>Em produção Em produção Em produção Em produção Em produção Em produção
+                            Em produção Em produção Em produção Em produção </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        
 
     </div>
 </body>
