sessão conhecimentos e imagem estilizada

--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
                         <h3>HTML</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Em produção Em produção Em produção Em produção Em produção Em produção
-                            Em produção Em produção Em produção Em produção
-                        </p>
+                        <p>Conhecimento avançado em HTML! Faça o orçamento ja para ter a página dos sonhos  
+                        com a melhor estrutura e organização disponível do mercado.</p>
                     </div>
                 </div>
                 <div class="conhecimento">
@@ -72,8 +71,9 @@
                         <h3>CSS</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Em produção Em produção Em produção Em produção Em produção Em produção
-                            Em produção Em produção Em produção Em produção</p>
+                        <p>Quer ver suas pagínas estilizadas e responsivas como esta? faça seu orçamento já!
+                            Conhecimento Intermediario em CSS.
+                        </p>
                     </div>
                 </div>
                 <div class="conhecimento">
@@ -82,8 +82,8 @@
                         <h3>JavaScript</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Em produção Em produção Em produção Em produção Em produção Em produção
-                            Em produção Em produção Em produção Em produção </p>
+                        <p>Conhecimento básico em JavaScript, tenha páginas animadas e com ferramentas automaticas!
+                        </p>
                     </div>
                 </div>
                 <div class="conhecimento">
@@ -92,8 +92,9 @@
                         <h3>Pacote Office</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Em produção Em produção Em produção Em produção Em produção Em produção
-                            Em produção Em produção Em produção Em produção</p>
+                        <p>Conhecimento avançado em pacote Office, faça o orçamento no site ou entre em contato!
+                            Planilhas, Modificação de arquivos, Apresentações e muito mais!
+                        </p>
                     </div>
                 </div>
                 <div class="conhecimento">
@@ -102,8 +103,9 @@
                         <h3>Git & GitHub</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Em produção Em produção Em produção Em produção Em produção Em produção
-                            Em produção Em produção Em produção Em produção</p>
+                        <p>Quer seus arquivos seguros e armazenados em um repositório? entre em contato agora mesmo!
+                            Conhecimento basico - Git e GitHub.
+                        </p>
                     </div>
                 </div>
                 <div class="conhecimento">
@@ -112,10 +114,15 @@
                         <h3>Banco de dados</h3>
                     </div>
                     <div class="conhecimento-text">
-                        <p>Em produção Em produção Em produção Em produção Em produção Em produção
-                            Em produção Em produção Em produção Em produção </p>
+                        <p>Pretende fazer um banco de dados para o seu negócio? entre em contato para fazer o orçamento.
+                            Conhecimento Basico - Banco de Dados.
+                        </p>
                     </div>
                 </div>
+                <div class="conhecimentos-img-wrapper">
+                    <img src="imagens/img_conhecimentos.png" alt="imagem conhecimento">
+                </div>
+
             </div>
         </section>
 
