Projetos - obs: erro ao abrir menu lateral

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                     <div class="conhecimento-text">
                         <p>Pretende fazer um banco de dados para o seu negócio? entre em contato para fazer o orçamento.
-                            Conhecimento Basico - Banco de Dados.
+                            Conhecimento basico - Banco de Dados.
                         </p>
                     </div>
                 </div>
@@ -124,6 +124,50 @@
                 </div>
 
             </div>
+        </section>
+        <section class="sessao-projetos">
+            <div class="sessao-header">
+                <h1>Projetos</h1>
+
+            </div>
+            <div class="projetos">
+                <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="imagens/Bgp1.jpg" alt="imagem projeto 1">
+                    </div>
+                    <div class="card-info">
+                        <h2>Controle de estoque</h2>
+                        <h3>HTML, CSS e JS</h3>
+                        <p>Em produção em produção em produção Em produção em produção em produção Em produção em produção em produção
+                            Em produção em produção em produção Em produção em produção em produção Em produção em produção em produção
+                        </p>
+                        <button>Saiba Mais</button>
+                    </div>
+                    </div>
+                    <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="imagens/img_produção.jpg" alt="imagem projeto 2">
+                    </div>
+                    <div class="card-info">
+                        <h2>Em produção</h2>
+                        <h3></h3>
+                        <p></p>
+                        <button>Saiba Mais</button>
+                    </div>
+                    </div>
+                    <div class="card">
+                    <div class="card-img-wrapper">
+                        <img src="imagens/img_produção.jpg" alt="imagem projeto 3">
+                    </div>
+                    <div class="card-info">
+                        <h2>Em produção</h2>
+                        <h3></h3>
+                        <p></p>
+                        <button>Saiba Mais</button>
+                    </div>
+                </div>
+            </div>
+
         </section>
 
         
