Manutenção do card - Controle de estoque

--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                     <div class="card-info">
                         <h2>Controle de estoque</h2>
                         <h3>HTML, CSS e JS</h3>
-                        <p>Em produção em produção em produção Em produção em produção em produção Em produção em produção em produção
-                            Em produção em produção em produção Em produção em produção em produção Em produção em produção em produção
+                        <p>Aplicação Web de controle de estoque! Cadastre-se agora mesmo e tenha controle do seu negócio, 
+                            clique em Saiba mais para mais informações.
                         </p>
                         <button>Saiba Mais</button>
                     </div>
