Controle de estoque - link

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <p>Aplicação Web de controle de estoque! Cadastre-se agora mesmo e tenha controle do seu negócio, 
                             clique em Saiba mais para mais informações.
                         </p>
-                        <button>Saiba Mais</button>
+                        <a href= "Controle de estoque/index.html" target="_blank"><button>Saiba Mais</button></a>
                     </div>
                     </div>
                     <div class="card">
