rodapé, links e funções

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         </div>
 
-        <header>
+        <header id="home">
             <div class="img-wrapper">
                 <img src="imagens/bg.jpg" alt="">
             </div>
@@ -34,23 +34,23 @@
         <aside class="sidebar">
             <nav>
                 <ul class="menu">
-                    <li class="menu-item"><a href="#" class="menu-link">Home</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Conhecimento</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Projetos</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Contato</a></li>
-                    <li class="menu-item"><a href="#" class="menu-link">Orçamento</a></li>
+                    <li class="menu-item"><a href="#home" class="menu-link">Home</a></li>
+                    <li class="menu-item"><a href="#conhecimentos" class="menu-link">Conhecimentos</a></li>
+                    <li class="menu-item"><a href="#projetos" class="menu-link">Projetos</a></li>
+                    <li class="menu-item"><a href="#contato" class="menu-link">Contato</a></li>
+                    <li class="menu-item"><a href="#orcamento" class="menu-link">Orçamento</a></li>
 
                 </ul>
             </nav>
             <div class="social-media">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-github"></i></a>
-                <a href="#"><i class="fab fa-instagram-square"></i></a>
+                <a href="https://www.facebook.com/profile.php?id=100052712466047" target="_blank"><i class="fab fa-facebook"></i></a>
+                <a href="https://github.com/Samuel-Sanches" target="_blank"><i class="fab fa-github"></i></a>
+                <a href="https://www.instagram.com/samuelsanches6/" target="_blank"><i class="fab fa-instagram-square"></i></a>
             </div>
         </aside>
 
 
-        <section class="sessao-conhecimentos">
+        <section class="sessao-conhecimentos" id="conhecimentos">
             <div class="sessao-header">
                 <h1>Conhecimentos</h1>
             </div>
@@ -125,7 +125,7 @@
 
             </div>
         </section>
-        <section class="sessao-projetos">
+        <section class="sessao-projetos" id="projetos">
             <div class="sessao-header">
                 <h1>Projetos</h1>
 
@@ -169,7 +169,7 @@
             </div>
 
         </section>
-        <section class="sessao-contato">
+        <section class="sessao-contato" id="contato">
             <div class="contato-wrapper">
                 <div class="contato-left">
 
@@ -196,7 +196,7 @@
 
             </div>
         </section>
-        <section class="sessao-orcamento">
+        <section class="sessao-orcamento" id="orcamento">
             <div class="orcamento-wrapper">
                 <h1>Faça um orçamento</h1>
                 <form>
@@ -221,6 +221,23 @@
                 </form>
             </div>
         </section>
+        <footer>
+            <div class="div footer-content">
+                <P>
+                    Copyright &copy; 2021, Samuel Sanches - Todos os direitos reservados
+                </P>
+                <div class="social-list">
+                    <ul>
+                        <li><a href="https://www.facebook.com/profile.php?id=100052712466047" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                        <li><a href="https://github.com/Samuel-Sanches" target="_blank"><i class="fab fa-github"></i></a></li>
+                        <li><a href="https://www.instagram.com/samuelsanches6/" target="_blank"><i class="fab fa-instagram-square"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+        <a href="#home" id="link-topo">
+            <i class="fas fa-arrow-up"></i>
+        </a> 
 
     </div>
 </body>
