--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         <h2>Em produção</h2>
                         <h3></h3>
                         <p></p>
-                        <button>Saiba Mais</button>
+                        <a href="pro.html"><button>Saiba Mais</button></a>
                     </div>
                     </div>
                     <div class="card">
@@ -163,7 +163,7 @@
                         <h2>Em produção</h2>
                         <h3></h3>
                         <p></p>
-                        <button>Saiba Mais</button>
+                        <a href="pro.html"><button>Saiba Mais</button></a>
                     </div>
                 </div>
             </div>
@@ -216,7 +216,9 @@
                         </div>
                     </div>
                     <label for="prazo">Prazo</label>
-                    <input type="range" name="prazo" id="prazo">
+                    <input type="range" name="prazo" id="prazo" min="1" max="10" value="10">
+                    <p class="PO">Pré-orçamento</p>
+                    <label id="preco">R$ 0,00</label>
                     <button class="btn-orcamento" type="submit">Enviar</button>
                 </form>
             </div>
