--- a/Em produção/pro.html
+++ b/Em produção/pro.html
@@ -14,12 +14,12 @@
 
         <header id="home">
             <div class="img-wrapper">
-                <img src="imagens/bg.jpg" alt="">
+                <img src="imagem/img_prod.jpg" alt="">
             </div>
             <div class="banner">
                 <h1>Ainda em produção</h1>
                 <p>Volte a página principal</p>
-                <a href="index.html"><button>Voltar</button></a>
+                <a href="../index.html"><button>Voltar</button></a>
             </div>
         </header>
         
