--- a/Controle de estoque/indexp2.html
+++ b/Controle de estoque/indexp2.html
@@ -31,7 +31,7 @@
                     </div>
                     
                     <div class="button">
-                        <button type="submit">Entrar</button>
+                        <button type="submit" onclick="validarAcesso('mail', 'pass')">Entrar</button>
                     </div>
                     
                 </form>
